public class Constants
{
    public class AnimationNames
    {
        ////////////// Characters /////////////
        public const string WALK = "Walk";
        public const string RUN = "Run";
        public const string MOVEMENT_SPEED = "MovementSpeed";
        public const string DEATH = "Death";
        public const string DAMAGED = "Damaged";
        public const string JUMP = "Jump";
        public const string GROUNDED = "Grounded";

        //////////// Unique to Player //////////
        public const string CROUCH = "Crouch";
        public const string FIRE_ATTACK = "FireAttack";
        public const string AIR_ATTACK = "AirAttack";
        public const string EARTH_ATTACK = "EarthAttack";
        public const string WATER_BUBBLE_ATTACK = "WaterAttack";
        public const string WATER_TUBE_ATTACK = "WaterTube";


        /////////// Unique to Enemy /////////// 
        public const string MELEE_ATTACK = "MeleeAttack";
        public const string RANGED_ATTACK = "RangedAttack";
    }
    
    public class Tags
    {
        public const string WATER_TAG = "Water";
        public const string GROUND_TAG = "Ground";
        public const string TERRAIN_TAG = "Terrain";
        public const string ENEMY_TAG = "Enemy";
        public const string PLAYER_TAG = "Player";
        public const string SMOKE_TAG = "Smoke";
        public const string VIEW_TAG = "View";
    }
}
